@@ -16,44 +16,34 @@
  */
 package org.anarres.cpp;
 
-import java.io.IOException;
-import java.util.Arrays;
+import mrmathami.annotations.Nonnull;
 import java.util.List;
 
-/* pp */ class FixedTokenSource extends Source {
+final class FixedTokenSource extends Source {
 
-    private static final Token EOF
-            = new Token(Token.EOF, "<ts-eof>");
+	private final List<Token> tokens;
+	private int idx = 0;
 
-    private final List<Token> tokens;
-    private int idx;
+	FixedTokenSource(Token... tokens) {
+		this.tokens = List.of(tokens);
+	}
 
-    /* pp */ FixedTokenSource(Token... tokens) {
-        this.tokens = Arrays.asList(tokens);
-        this.idx = 0;
-    }
+	FixedTokenSource(List<Token> tokens) {
+		this.tokens = List.copyOf(tokens);
+	}
 
-    /* pp */ FixedTokenSource(List<Token> tokens) {
-        this.tokens = tokens;
-        this.idx = 0;
-    }
+	@Nonnull
+	@Override
+	public Token token() {
+		return idx >= tokens.size() ? Token.eof : tokens.get(idx++);
+	}
 
-    @Override
-    public Token token()
-            throws IOException,
-            LexerException {
-        if (idx >= tokens.size())
-            return EOF;
-        return tokens.get(idx++);
-    }
-
-    @Override
-    public String toString() {
-        StringBuilder buf = new StringBuilder();
-        buf.append("constant token stream ").append(tokens);
-        Source parent = getParent();
-        if (parent != null)
-            buf.append(" in ").append(String.valueOf(parent));
-        return buf.toString();
-    }
+	@Override
+	public String toString() {
+		StringBuilder buf = new StringBuilder();
+		buf.append("constant token stream ").append(tokens);
+		Source parent = getParent();
+		if (parent != null) buf.append(" in ").append(parent);
+		return buf.toString();
+	}
 }
